--- a/src/i18n/lang/en/documents.json
+++ b/src/i18n/lang/en/documents.json
@@ -9,5 +9,12 @@
   "status": "Status",
   "status_draft": "Draft",
   "status_review": "Review",
-  "status_approved": "Approved"
+  "status_approved": "Approved",
+  "columns": "Columns",
+  "view_table": "Table",
+  "view_grid": "Grid",
+  "bulk_delete": "Delete",
+  "bulk_change_status": "Change status",
+  "bulk_export": "Export",
+  "selected_count": "{{count}} selected"
 }
