--- a/src/i18n/lang/uk/documents.json
+++ b/src/i18n/lang/uk/documents.json
@@ -9,5 +9,12 @@
   "status": "Статус",
   "status_draft": "Чернетка",
   "status_review": "На перевірці",
-  "status_approved": "Затверджено"
+  "status_approved": "Затверджено",
+  "columns": "Колонки",
+  "view_table": "Таблиця",
+  "view_grid": "Сітка",
+  "bulk_delete": "Видалити",
+  "bulk_change_status": "Змінити статус",
+  "bulk_export": "Експорт",
+  "selected_count": "Обрано: {{count}}"
 }
