feat(documents): upload page with file and metadata form

--- a/src/i18n/lang/en/common.json
+++ b/src/i18n/lang/en/common.json
@@ -8,6 +8,7 @@
   "edit": "Edit",
   "confirm": "Confirm",
   "back": "Back",
+  "next": "Next",
   "loading": "Loading...",
   "no_data": "No data available",
   "error_occurred": "An error occurred"
