--- a/src/i18n/lang/en/documents.json
+++ b/src/i18n/lang/en/documents.json
@@ -16,5 +16,36 @@
   "bulk_delete": "Delete",
   "bulk_change_status": "Change status",
   "bulk_export": "Export",
-  "selected_count": "{{count}} selected"
+  "selected_count": "{{count}} selected",
+  "upload_title": "Upload document",
+  "upload_step_file": "Select file",
+  "upload_step_metadata": "Metadata",
+  "upload_step_review": "Review",
+  "upload_drop": "Drag and drop a file here, or click to select",
+  "upload_file_types": "PDF, DOCX, images (PNG, JPG, GIF, WebP)",
+  "upload_max_size": "Max 10 MB",
+  "upload_field_title": "Title",
+  "upload_field_description": "Description",
+  "upload_field_tags": "Tags (comma-separated)",
+  "upload_field_category": "Category",
+  "upload_field_access": "Access level",
+  "upload_review_submit": "Upload",
+  "upload_success": "Document uploaded successfully",
+  "upload_error": "Upload failed",
+  "upload_validation_file_required": "Select a file",
+  "upload_validation_file_type": "Invalid file type",
+  "upload_validation_file_size": "File is too large (max 10 MB)",
+  "upload_validation_title_required": "Title is required",
+  "upload_validation_title_max": "Title is too long",
+  "upload_validation_description_max": "Description is too long",
+  "upload_validation_tags_max": "Tags text is too long",
+  "upload_validation_category_required": "Select a category",
+  "upload_validation_access_required": "Select access level",
+  "upload_category_contracts": "Contracts",
+  "upload_category_reports": "Reports",
+  "upload_category_design": "Design",
+  "upload_category_other": "Other",
+  "upload_access_view": "View",
+  "upload_access_edit": "Edit",
+  "upload_access_admin": "Admin"
 }
