--- a/src/i18n/lang/uk/common.json
+++ b/src/i18n/lang/uk/common.json
@@ -8,6 +8,7 @@
   "edit": "Редагувати",
   "confirm": "Підтвердити",
   "back": "Назад",
+  "next": "Далі",
   "loading": "Завантаження...",
   "no_data": "Немає даних",
   "error_occurred": "Сталася помилка"
