--- a/src/i18n/lang/uk/documents.json
+++ b/src/i18n/lang/uk/documents.json
@@ -16,5 +16,36 @@
   "bulk_delete": "Видалити",
   "bulk_change_status": "Змінити статус",
   "bulk_export": "Експорт",
-  "selected_count": "Обрано: {{count}}"
+  "selected_count": "Обрано: {{count}}",
+  "upload_title": "Завантажити документ",
+  "upload_step_file": "Вибір файлу",
+  "upload_step_metadata": "Метадані",
+  "upload_step_review": "Перегляд",
+  "upload_drop": "Перетягніть файл сюди або натисніть для вибору",
+  "upload_file_types": "PDF, DOCX, зображення (PNG, JPG, GIF, WebP)",
+  "upload_max_size": "Макс. 10 МБ",
+  "upload_field_title": "Назва",
+  "upload_field_description": "Опис",
+  "upload_field_tags": "Теги (через кому)",
+  "upload_field_category": "Категорія",
+  "upload_field_access": "Рівень доступу",
+  "upload_review_submit": "Завантажити",
+  "upload_success": "Документ успішно завантажено",
+  "upload_error": "Помилка завантаження",
+  "upload_validation_file_required": "Оберіть файл",
+  "upload_validation_file_type": "Недопустимий тип файлу",
+  "upload_validation_file_size": "Файл занадто великий (макс. 10 МБ)",
+  "upload_validation_title_required": "Назва обовʼязкова",
+  "upload_validation_title_max": "Назва занадто довга",
+  "upload_validation_description_max": "Опис занадто довгий",
+  "upload_validation_tags_max": "Текст тегів занадто довгий",
+  "upload_validation_category_required": "Оберіть категорію",
+  "upload_validation_access_required": "Оберіть рівень доступу",
+  "upload_category_contracts": "Договори",
+  "upload_category_reports": "Звіти",
+  "upload_category_design": "Дизайн",
+  "upload_category_other": "Інше",
+  "upload_access_view": "Перегляд",
+  "upload_access_edit": "Редагування",
+  "upload_access_admin": "Адмін"
 }
