refactor(comments): extract handlers to named functions and decompose logic into hook

--- a/src/i18n/lang/en/documents.json
+++ b/src/i18n/lang/en/documents.json
@@ -8,6 +8,23 @@
   "detail_preview_image": "Image preview placeholder",
   "detail_metadata": "Metadata",
   "detail_modified": "Modified {{date}}",
+  "detail_version_history": "Version history",
+  "detail_version_number": "Version {{number}}",
+  "detail_version_label_initial": "Initial version",
+  "detail_version_label_updated": "Updated",
+  "detail_version_label_final": "Final",
+  "detail_version_by": "by {{author}}",
+  "detail_activity_log": "Activity log",
+  "detail_activity_created": "Created",
+  "detail_activity_edited": "Edited",
+  "detail_activity_shared": "Shared",
+  "detail_activity_commented": "Commented",
+  "detail_comments_title": "Comments",
+  "detail_comments_placeholder": "Write a comment…",
+  "detail_comments_add": "Add comment",
+  "detail_comments_reply": "Reply",
+  "detail_comments_reply_placeholder": "Write a reply…",
+  "detail_comments_me": "Me",
   "upload": "Upload",
   "name": "Name",
   "type": "Type",
