--- a/src/i18n/lang/uk/documents.json
+++ b/src/i18n/lang/uk/documents.json
@@ -8,6 +8,23 @@
   "detail_preview_image": "Плейсхолдер превʼю зображення",
   "detail_metadata": "Метадані",
   "detail_modified": "Змінено {{date}}",
+  "detail_version_history": "Історія версій",
+  "detail_version_number": "Версія {{number}}",
+  "detail_version_label_initial": "Початкова версія",
+  "detail_version_label_updated": "Оновлено",
+  "detail_version_label_final": "Фінальна",
+  "detail_version_by": "автор {{author}}",
+  "detail_activity_log": "Журнал активності",
+  "detail_activity_created": "Створено",
+  "detail_activity_edited": "Редаговано",
+  "detail_activity_shared": "Поділено",
+  "detail_activity_commented": "Коментар",
+  "detail_comments_title": "Коментарі",
+  "detail_comments_placeholder": "Напишіть коментар…",
+  "detail_comments_add": "Додати коментар",
+  "detail_comments_reply": "Відповісти",
+  "detail_comments_reply_placeholder": "Напишіть відповідь…",
+  "detail_comments_me": "Я",
   "upload": "Завантажити",
   "name": "Назва",
   "type": "Тип",
