feat: Analytics panel (Recharts, date filter, nav link)

--- a/src/i18n/lang/en/documents.json
+++ b/src/i18n/lang/en/documents.json
@@ -25,6 +25,19 @@
   "detail_comments_reply": "Reply",
   "detail_comments_reply_placeholder": "Write a reply…",
   "detail_comments_me": "Me",
+  "detail_sharing_title": "Sharing",
+  "detail_sharing_email_placeholder": "Add by email",
+  "detail_sharing_permission_label": "Permission",
+  "detail_sharing_add": "Add",
+  "detail_sharing_remove": "Remove {{email}}",
+  "detail_sharing_remove_short": "Remove",
+  "detail_sharing_permission_for": "Permission for {{email}}",
+  "analytics_title": "Analytics",
+  "analytics_storage_title": "Storage by file type",
+  "analytics_upload_activity_title": "Upload activity",
+  "analytics_status_title": "Documents by status",
+  "analytics_date_from": "From",
+  "analytics_date_to": "To",
   "upload": "Upload",
   "name": "Name",
   "type": "Type",
