--- a/src/i18n/lang/uk/documents.json
+++ b/src/i18n/lang/uk/documents.json
@@ -25,6 +25,19 @@
   "detail_comments_reply": "Відповісти",
   "detail_comments_reply_placeholder": "Напишіть відповідь…",
   "detail_comments_me": "Я",
+  "detail_sharing_title": "Доступ",
+  "detail_sharing_email_placeholder": "Додати за email",
+  "detail_sharing_permission_label": "Права",
+  "detail_sharing_add": "Додати",
+  "detail_sharing_remove": "Видалити {{email}}",
+  "detail_sharing_remove_short": "Видалити",
+  "detail_sharing_permission_for": "Права для {{email}}",
+  "analytics_title": "Аналітика",
+  "analytics_storage_title": "Сховище за типом файлу",
+  "analytics_upload_activity_title": "Активність завантажень",
+  "analytics_status_title": "Документи за статусом",
+  "analytics_date_from": "Від",
+  "analytics_date_to": "До",
   "upload": "Завантажити",
   "name": "Назва",
   "type": "Тип",
