feat: add loading skeletons and bulk actions

--- a/src/i18n/lang/en/documents.json
+++ b/src/i18n/lang/en/documents.json
@@ -54,6 +54,10 @@
   "bulk_delete": "Delete",
   "bulk_change_status": "Change status",
   "bulk_export": "Export",
+  "bulk_delete_success": "{{count}} document(s) deleted",
+  "bulk_export_success": "{{count}} document(s) exported",
+  "bulk_change_status_success": "Status updated for {{count}} document(s)",
+  "bulk_change_status_modal_title": "Change status",
   "selected_count": "{{count}} selected",
   "upload_title": "Upload document",
   "upload_step_file": "Select file",
