--- a/src/i18n/lang/uk/documents.json
+++ b/src/i18n/lang/uk/documents.json
@@ -54,6 +54,10 @@
   "bulk_delete": "Видалити",
   "bulk_change_status": "Змінити статус",
   "bulk_export": "Експорт",
+  "bulk_delete_success": "{{count}} документ(ів) видалено",
+  "bulk_export_success": "{{count}} документ(ів) експортовано",
+  "bulk_change_status_success": "Статус оновлено для {{count}} документ(ів)",
+  "bulk_change_status_modal_title": "Змінити статус",
   "selected_count": "Обрано: {{count}}",
   "upload_title": "Завантажити документ",
   "upload_step_file": "Вибір файлу",
